tests/invalid/grant-other-host.pkl
/// Per-host ledger (conservative accounting): a grant made on another
/// host does NOT cover a requirement here, even though the dependency
/// succeeded.
module tests.invalid.grantOtherHost

extends "../../core/template.pkl"

import "../../core/resource.pkl"
import "../../core/host.pkl"
import "../../core/job.pkl"
import "../support/testkit.pkl"

resA: resource.EphemeralResource = new {
  name = "res-a"
  provider = new testkit.TestProvider { provides { "bash" } }
}
resB: resource.EphemeralResource = new {
  name = "res-b"
  provider = new testkit.TestProvider { provides { "bash" } }
}

hostA: host.Host = new { name = "host-a"; backedBy = resA }
hostB: host.Host = new { name = "host-b"; backedBy = resB }

prepare: job.Job = new {
  name = "prepare"
  runsOn = hostA
  actions {
    new testkit.TestAction { name = "install"; requires { "bash" }; grants { "docker" } }
  }
}

use: job.Job = new {
  name = "use"
  runsOn = hostB
  needs { prepare }
  actions {
    new testkit.TestAction { name = "run"; requires { "docker" } }
  }
}

wf {
  name = "bad"
  resources { resA; resB }
  hosts { hostA; hostB }
  jobs { prepare; use }
}
